Sorted out file struture, added CSS file.

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Propositional Logic Calculator</title>
+    <link rel="stylesheet" type="text/css" href="styling.css">
+    <script src="js/parser.js"></script>
+    <script src="js/index.js"></script>
   </head>
 <body>
 
@@ -57,8 +60,4 @@
 
 
 </body>
-
-<script src="parser.js"></script>
-<script src="index.js"></script>
-
 </html>
