Revised algorithm, now correctly parses and evaluates expressions according to their placement of parentheses

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 
   <section>
     <form onsubmit="submitProposition(this); return false;">
-      <h3>Proposition</h3><input type="text" id="proposition"/>
-      <input type="submit" value="Generate Truth Table"/>
+      <h3>Proposition</h3><input class="searchBar" type="text" id="proposition"/>
+      <input class="searchButton" type="submit" value="Generate Truth Table"/>
     </form>
 
     <section>
